--- a/Blazor-Dashboard/Shared/NavMenu.cshtml
+++ b/Blazor-Dashboard/Shared/NavMenu.cshtml
@@ -17,16 +17,19 @@
                     <span class="oi oi-home" aria-hidden="true"></span> Home
                 </NavLink>
             </li>
-            <li class="nav-item-side px-3">
-                <NavLink class="nav-link" href="counter">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                </NavLink>
-            </li>
-            <li class="nav-item-side px-3">
-                <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                </NavLink>
-            </li>
+            <!--
+
+                <li class="nav-item-side px-3">
+                    <NavLink class="nav-link" href="counter">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                    </NavLink>
+                </li>
+                <li class="nav-item-side px-3">
+                    <NavLink class="nav-link" href="fetchdata">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    </NavLink>
+                </li>
+    -->
 
         </ul>
     </div>
@@ -59,8 +62,21 @@
     Action ToggleNavMenuChanged { get; set; }
 
 
-    public async static Task LaunchSideBar()
+    public async Task LaunchSideBar()
     {
+        BlazorDashboard.XSingleton.NavBarDisplay = false;
+        ToggleNavMenuChanged();
         await JSRuntime.Current.InvokeAsync<bool>("LaunchSideBar");
     }
+
+    [JSInvokable]
+    public static string SayHello() => $"Hello!";
+
+    [JSInvokable]
+    public static void RestoreTopBar()
+    {
+        BlazorDashboard.XSingleton.NavBarDisplay = false;
+    }
+
+
 }
