--- a/Blazor-Dashboard/wwwroot/css/site.css
+++ b/Blazor-Dashboard/wwwroot/css/site.css
@@ -300,7 +300,9 @@ app {
     */
 
     .sidebar {
+        /*
         background: black;
+        */
         width: 250px;
         height: 100vh;
         position: sticky;
