--- a/Blazor-Dashboard/Pages/Counter.cshtml
+++ b/Blazor-Dashboard/Pages/Counter.cshtml
@@ -3,14 +3,16 @@
 <h1>Counter</h1>
 
 <p>Current count: @currentCount</p>
+This is a long long test.This is a long long test. This is a long long test.This is a long long test.This is a long long test.This is a long long test.This is a long long test.
+
 
 <button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
 
 @functions {
-    int currentCount = 0;
+int currentCount = 0;
 
-    void IncrementCount()
-    {
-        currentCount++;
-    }
+void IncrementCount()
+{
+    currentCount++;
+}
 }
