--- a/Blazor-Dashboard/Shared/NavMenu.cshtml
+++ b/Blazor-Dashboard/Shared/NavMenu.cshtml
@@ -17,18 +17,32 @@
                     <span class="oi oi-home" aria-hidden="true"></span> Home
                 </NavLink>
             </li>
+
+            <li class="nav-item-side px-3">
+                <NavLink class="nav-link" href="counter">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                </NavLink>
+            </li>
+            <li class="nav-item-side px-3">
+                <NavLink class="nav-link" href="fetchdata">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                </NavLink>
+            </li>
             <!--
 
-                <li class="nav-item-side px-3">
-                    <NavLink class="nav-link" href="counter">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </li>
-                <li class="nav-item-side px-3">
-                    <NavLink class="nav-link" href="fetchdata">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                    </NavLink>
-                </li>
+    <li class="nav-item-side px-3">
+        <NavLink class="nav-link" href="fetchdata">
+            <span class="oi oi-list-rich" aria-hidden="true"></span> Counter
+        </NavLink>
+        <ul style="display:block">
+            <li style="color:white">
+                Submenu 1
+            </li>
+            <li style="color:white">
+                Submenu 2
+            </li>
+        </ul>
+    </li>
     -->
 
         </ul>
@@ -78,5 +92,15 @@
         BlazorDashboard.XSingleton.NavBarDisplay = false;
     }
 
+    [JSInvokable]
+    public static void HideTopBar()
+    {
+        BlazorDashboard.XSingleton.NavBarDisplay = false;
+    }
+    [JSInvokable]
+    public static void ShowTopBar()
+    {
+        BlazorDashboard.XSingleton.NavBarDisplay = true;
+    }
 
 }
