--- a/Blazor-Dashboard/Pages/Counter.cshtml
+++ b/Blazor-Dashboard/Pages/Counter.cshtml
@@ -3,7 +3,7 @@
 <h1>Counter</h1>
 
 <p>Current count: @currentCount</p>
-This is a long long test.This is a long long test. This is a long long test.This is a long long test.This is a long long test.This is a long long test.This is a long long test.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
 <button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
